Issue #15841: The readable(), writable() and seekable() methods of io.BytesIO and io.StringIO objects now raise ValueError when the object has been closed. Patch by Alessandro Moura.